# DKX

./: .gitignore  .test_durations  README.md  plan.md  plan_claude.md  plan_final.md  pyproject.toml
dkx/: README.md  __init__.py  ambipolar.py  api.py  batch.py  bounce_averaged.py  cli.py  collisions.py  constants.py  drift_kinetic.py  er.py  impurity.py  input_compat.py  inputs.py  io.py  magnetic_geometry.py  moments.py  momentum_correction.py  monoenergetic.py  paths.py  phase_space.py  phi1.py  plotting.py  profiling.py  run.py  shaing_callen.py  solve.py  solver_trace.py  species.py  validity.py  variational.py  writer.py
docs/: adaptive_speed_grid.rst  api.rst  applications.rst  capabilities.rst  conf.py  contributing.rst  development_roadmap.rst  differentiability.rst  examples.rst  feature_matrix.rst  fortran_comparison.rst  fortran_examples.rst  geometry.rst  index.rst  inputs.rst  installation.rst  method.rst  normalizations.rst  ntx_handoff.rst  numerics.rst  optimization.rst  outputs.rst  paper_figures.rst  parallelism.rst  parity.rst  performance.rst  performance_techniques.rst  physics_models.rst  physics_reference.rst  references.rst  release_checklist.rst  release_notes.rst  research_lanes.rst  source_map.rst  system_equations.rst  testing.rst  theory_from_upstream.rst  upstream_docs.rst  usage.rst  utils.rst  (+3 more)
examples/: README.md  _example_utils.py  ambipolar_er_scan.py  gradients_tour.py  list_workflows.py  optimize_QA_bootstrap.py  run_tokamak.py  run_w7x.py  transport_coefficients.py  workflow_catalog.json
scripts/: audit_fortran_jax_operator.py  audit_qs_paper_terms.py  audit_rhs1_solver_stack.py  audit_suite_output_keys.py  audit_suite_runtime_drift.py  benchmark_artifact_index.py  benchmark_case_variants.py  benchmark_jax_ecosystem_backends.py  benchmark_pas_tz_memory_fallback.py  benchmark_rhs1_fblock_csr_reuse.py  benchmark_rhs1_full_csr_reuse.py  benchmark_rhs1_pas_matrixfree.py  benchmark_structured_fblock_preconditioners.py  build_zenodo_vmec_manifest.py  check_benchmark_artifacts.py  check_qi_device_artifacts.py  check_release_gates.py  check_repo_size.py  check_research_lanes.py  compare_fortran_jax_solver_profiles.py  compare_fortran_matrix_to_jax_operator.py  compare_petsc_operator.py  compare_rhsmode1_diagnostics_from_state.py  compare_v3_example_suite.py  compress_images.py  create_production_benchmark_inputs.py  create_production_stress_campaign.py  fetch_equilibria.py  generate_fortran_example_audit.py  generate_parallel_scaling_snapshot.py  generate_readme_fast_branch_audit.py  generate_readme_reduced_suite_table.py  materialize_production_stress_manifest.py  profile_transport_traces.py  profile_write_output_trace.py  run_mapped_xgrid_transport_evidence.py  run_qi_seed_robustness.py  run_reduced_upstream_suite.py  run_scaled_example_suite.py  run_zenodo_vmec_parity_campaign.py  (+5 more)
sfincs_jax/: README.md  __init__.py  adaptive_maps.py  api.py  batch.py  benchmark_artifact_policy.py  boozer_bc.py  bounce_averaged.py  cli.py  collisionless.py  collisionless_er.py  collisionless_exb.py  collisions.py  collisions_v2.py  compare.py  console.py  constants.py  constants_v2.py  constrained_pas_branch.py  constraint_projection.py  data_fetch.py  diagnostics.py  dke_v2.py  drift_kinetic.py  er.py  explicit_sparse.py  explicit_sparse_factor_builder.py  explicit_sparse_factor_policy.py  fortran.py  geometry.py  grids.py  grids_v2.py  h5_parity.py  host_refinement.py  implicit_solve.py  input_compat.py  inputs.py  io.py  jax_geometry_adapters.py  krylov_dispatch.py  (+153 more)
tests/: _golden_cache.py  conftest.py  test_adaptive_maps.py  test_ambipolar_problem.py  test_api_contracts.py  test_audit_fortran_jax_operator.py  test_audit_qs_paper_terms.py  test_audit_rhs1_solver_stack.py  test_audit_suite_output_keys.py  test_audit_suite_runtime_drift.py  test_batch.py  test_benchmark_artifact_policy.py  test_benchmark_case_variants.py  test_benchmark_doc_claims.py  test_benchmark_multi_gpu_case_throughput.py  test_benchmark_pas_tz_memory_fallback.py  test_benchmark_rhs1_fblock_csr_reuse.py  test_benchmark_rhs1_full_csr_reuse.py  test_benchmark_rhs1_pas_matrixfree.py  test_benchmark_sharded_solve_scaling.py  test_benchmark_structured_fblock_preconditioners.py  test_benchmark_structured_solve.py  test_benchmark_transport_parallel_scaling.py  test_benchmark_w7x_high_nu_preconditioners.py  test_block_tridiagonal_transport.py  test_bounce_averaged.py  test_cli_solve_mode.py  (+387 more)
(+1292 files in other folders)
