[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfincs_jax"
version = "1.1.7"
description = "Neoclassical transport solver with CPU/GPU and differentiable JAX workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "numpy",
  "scipy",
  "h5py",
  "netCDF4",
  "matplotlib",
  # solvax (PyPI) owns the structured linear-algebra solver tiers (block-Thomas
  # elimination, recycled GCROT, implicit differentiation) that every canonical
  # solve uses; it is a core dependency, not optional.
  "solvax",
]

[project.optional-dependencies]
# Retained as a no-op alias so existing `pip install sfincs_jax[structured]`
# invocations keep working; solvax is now a core dependency (see above).
structured = [
  "solvax",
]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-split",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]

[project.scripts]
sfincs_jax = "sfincs_jax.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfincs_jax*"]

[tool.setuptools.package-data]
sfincs_jax = ["validation/*.json"]

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# The large profile and transport solve owners still retain dynamic globals and
# optional solver imports that are exercised through policy tests. Keep the rest
# of the package strict while these owners are simplified in the retained-owner
# audit.
"sfincs_jax/problems/profile_solve.py" = ["E402", "E731", "E741", "F401", "F811", "F821", "F841"]
"sfincs_jax/problems/transport_solve.py" = ["E402", "E731", "E741", "F401", "F811", "F821", "F841"]
