[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dkx"
version = "2.0.0"
description = "Neoclassical transport solver with CPU/GPU and differentiable JAX workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "numpy",
  "scipy",
  "h5py",
  "netCDF4",
  "matplotlib",
  # solvax (PyPI) owns the structured linear-algebra solver tiers (block-Thomas
  # elimination, recycled GCROT, implicit differentiation) that every canonical
  # solve uses; it is a core dependency, not optional.
  "solvax",
]

[project.optional-dependencies]
# Retained as a no-op alias so existing `pip install dkx[structured]`
# invocations keep working; solvax is now a core dependency (see above).
structured = [
  "solvax",
]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-split",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]

[project.scripts]
dkx = "dkx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dkx*"]

[tool.setuptools.package-data]
dkx = ["validation/*.json"]

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend"]
testpaths = ["tests"]
markers = [
  "slow: heavy end-to-end example/optimization tests; excluded from the fast coverage shards via -m 'not slow' (still run in the full local suite).",
]

